--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
 	<meta name="msapplication-TileImage" content="favicon/favicon-144.png">
 	<meta name="msapplication-config" content="favicon/browserconfig.xml">
   <body>
+      <div class="media__loader--holder">
+          <div class="media__loader media__loader--inside"></div>
+          <div class="media__loader media__loader--outside"></div>
+      </div>
       <header class="page__header overlay interaction--load">
         <div class="overlay__media">
             <video playsinline autoplay muted loop class="media__video" controls="false">
