Remove <br> from header

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="row header__container">
             <div class="header__content column">
-                <h1 class="page__title">Shop for <span class="color--orange">broadband</span> <br>cable services in your area.</h1>
+                <h1 class="page__title">Shop for <span class="color--orange">broadband</span> cable services in your area.</h1>
                 <p>See plans, prices, and schedule your service.</p>
             </div>
             <div class="column">
