--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <title>Kyrio GO2Broadband</title>
     <meta name="description" content="Shop for broadband cable services in your area. See plans, prices, and schedule your service.">
     <link rel="stylesheet" href="css/app.css" type="text/css">
+    <!--[if lte IE 9]>
+      <link rel="stylesheet" href="css/ie.css" type="text/css">
+    <![endif]-->
     <link rel="shortcut icon" href="favicon/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="favicon/favicon-192.png">
