Add closing </head>

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-TileImage" content="favicon/favicon-144.png">
 	<meta name="msapplication-config" content="favicon/browserconfig.xml">
+  </head>
   <body>
       <div class="media__loader--holder">
           <div class="media__loader media__loader--inside"></div>
@@ -110,7 +111,7 @@
                   <img class="badge__divider--horiz" src="media/badge-divider-horiz.png">
                   <img class="badge__divider--vert"src="media/badge-divider-vert.png">
               </div>
-              
+
               <div class="badge">
                   <div class="badge__media">
                       <img src="media/setup-graphic.png" alt="">
