--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <meta name="msapplication-TileImage" content="favicon/favicon-144.png">
         <meta name="msapplication-config" content="favicon/browserconfig.xml">
     </head>
-    <body>
+    <body class="page--main">
         
 <div class="media__loader--holder">
     <div class="media__loader media__loader--inside"></div>
